--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/sanctum": "^4.0",
+        "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^3.6",
+        "livewire/livewire": "*",
         "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
